Criaçao dos subelementos

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                     </label>
                     <h1>Teste</h1>
                     <ul>
-                        <li><a href="#">Quem é a B2W?</a></li>
-                        <li><a href="#">Problema</a></li>
-                        <li><a href="#">Solução</a></li>
-                        <li><a href="#">Equipe</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="#b2w">Quem é a B2W?</a></li>
+                        <li><a href="#problema">Problema</a></li>
+                        <li><a href="#solucao">Solução</a></li>
+                        <li><a href="#equipe">Equipe</a></li>
+                        <li><a href="#contato">Contato</a></li>
                     </ul>
                 </nav>
                 <div class="banner-area">
@@ -33,23 +33,132 @@
             </header>
 
             <section class="sec1" >
-                    aaa
+              <h2><a href="#" name="b2w">Quem é a B2W</a></h2>
+              <div class="">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                  qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
             </section>
 
             <section class="sec2" >
-
+              <h2><a href="#" name="problema">Problema</a></h2>
+              <div class="">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                  qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
             </section>
 
             <section class="sec3" >
-
+              <h2><a href="#" name="solucao">Solução</a></h2>
+              <div class="">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                  qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
             </section>
 
             <section class="sec4" >
+              <h2><a href="#" name="equipe">Equipe</a></h2>
+
+              <div class="membro">
+                <figure>
+                  <img src="#" alt="imagem menbro">
+                  <figcaption>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="membro">
+                <figure>
+                  <img src="#" alt="imagem menbro">
+                  <figcaption>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="membro">
+                <figure>
+                  <img src="#" alt="imagem menbro">
+                  <figcaption>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="membro">
+                <figure>
+                  <img src="#" alt="imagem menbro">
+                  <figcaption>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="membro">
+                <figure>
+                  <img src="#" alt="imagem menbro">
+                  <figcaption>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="membro">
+                <figure>
+                  <img src="#" alt="imagem menbro">
+                  <figcaption>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                  </figcaption>
+                </figure>
+              </div>
+
 
             </section>
 
             <section class="sec5" >
-
+              <h2> <a href="#" name="contato">Fale Conosco</a></h2>
+              <div class="">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                  qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
+              <div class="">
+                <form class="formulario" action="index.html" method="post">
+                  <input type="text" name="nome" placeholder="Nome Completo" value="">
+                  <input type="email" name="email" placeholder="ex: exaple@mail.com" value="">
+                  <input type="tel" name="telefone" placeholder="(00) 00000-0000" value="">
+                  <textarea name="mensagem" rows="8" cols="80" placeholder="Digite sua mensagem..."></textarea>
+                  <button type="submit" name="button-enviar"></button>
+                </form>
+              </div>
             </section>
 
             <footer class="rodape">
