Uso do flex-box

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                         <i class = "fa fa-hars" id="sign-one"></i>
                         <i class="fa fa-times" id="sign-two"></i>
                     </label>
-                    <h1>Teste</h1>
+                    <figure>
+                      <!--<img src="./img/imgs/b2w.png" alt="">-->
+                    </figure>
                     <ul>
                         <li><a href="#b2w">Quem é a B2W?</a></li>
                         <li><a href="#problema">Problema</a></li>
