--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
                 <nav>
                     <input type="checkbox" id="res-menu">
                     <label for="res-menu">
-                        <i class = "fa fa-hars" id="sign-one"></i>
-                        <i class="fa fa-times" id="sign-two"></i>
+                        <i class = "fa fa-hars" id="sign-one">____</i>
+                        <i class="fa fa-times" id="sign-two">____</i>
                     </label>
-                    <figure>
-                      <!--<img src="./img/imgs/b2w.png" alt="">-->
-                    </figure>
+
                     <ul>
                         <li><a href="#b2w">Quem é a B2W?</a></li>
                         <li><a href="#problema">Problema</a></li>
@@ -29,14 +27,26 @@
                 </nav>
                 <div class="banner-area">
                     <div class="banner-text">
-                        <h2>Responsive Navbar</h2>
+                        <figure id="logo-b2w">
+                            <img src="./img/imgs/b2w.png" alt="">
+                        </figure>
+                        <div class="frase">
+                            <h1>
+                                Storm IT Solutions
+                            </h1>
+                            <p>
+                                Uma tempestade de soluções para eletrizar o seu negócio!!
+                            </p>
+                        </div>
                     </div>
                 </div>
+
             </header>
 
+
             <section class="sec1" >
-              <h2><a href="#" name="b2w">Quem é a B2W</a></h2>
-              <div class="">
+              <h2><a href="#" name="b2w">Quem é a B2W?</a></h2>
+              <div class="texto">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                   sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -48,10 +58,11 @@
                 </p>
               </div>
             </section>
+
 
             <section class="sec2" >
               <h2><a href="#" name="problema">Problema</a></h2>
-              <div class="">
+              <div class="texto">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                   sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -63,10 +74,11 @@
                 </p>
               </div>
             </section>
+
 
             <section class="sec3" >
               <h2><a href="#" name="solucao">Solução</a></h2>
-              <div class="">
+              <div class="texto">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                   sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -78,92 +90,127 @@
                 </p>
               </div>
             </section>
+
 
             <section class="sec4" >
-              <h2><a href="#" name="equipe">Equipe</a></h2>
+                <h2><a href="#" name="equipe">Quem somos nós?</a></h2>
 
-              <div class="membro">
-                <figure>
-                  <img src="#" alt="imagem menbro">
-                  <figcaption>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                  </figcaption>
-                </figure>
-              </div>
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                        <figcaption>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                        </figcaption>
+                    </figure>
+                </div>
 
-              <div class="membro">
-                <figure>
-                  <img src="#" alt="imagem menbro">
-                  <figcaption>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                  </figcaption>
-                </figure>
-              </div>
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                        <figcaption>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                        </figcaption>
+                    </figure>
+                </div>
 
-              <div class="membro">
-                <figure>
-                  <img src="#" alt="imagem menbro">
-                  <figcaption>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                  </figcaption>
-                </figure>
-              </div>
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                        <figcaption>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                        </figcaption>
+                    </figure>
+                </div>
 
-              <div class="membro">
-                <figure>
-                  <img src="#" alt="imagem menbro">
-                  <figcaption>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                  </figcaption>
-                </figure>
-              </div>
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                        <figcaption>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                        </figcaption>
+                    </figure>
+                </div>
 
-              <div class="membro">
-                <figure>
-                  <img src="#" alt="imagem menbro">
-                  <figcaption>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                  </figcaption>
-                </figure>
-              </div>
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                        <figcaption>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                        </figcaption>
+                    </figure>
+                </div>
 
-              <div class="membro">
-                <figure>
-                  <img src="#" alt="imagem menbro">
-                  <figcaption>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                  </figcaption>
-                </figure>
-              </div>
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                        <figcaption>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                        </figcaption>
+                    </figure>
+                </div>
 
 
             </section>
+
 
             <section class="sec5" >
-              <h2> <a href="#" name="contato">Fale Conosco</a></h2>
-              <div class="">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                  qui officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
-              <div class="">
-                <form class="formulario" action="index.html" method="post">
-                  <input type="text" name="nome" placeholder="Nome Completo" value="">
-                  <input type="email" name="email" placeholder="ex: exaple@mail.com" value="">
-                  <input type="tel" name="telefone" placeholder="(00) 00000-0000" value="">
-                  <textarea name="mensagem" rows="8" cols="80" placeholder="Digite sua mensagem..."></textarea>
-                  <button type="submit" name="button-enviar"></button>
-                </form>
-              </div>
+                <h2> <a href="#" name="contato">Fale Conosco</a></h2>
+                <div class="texto">
+                     <p>
+                         Ficou com alguma dúvida, sugestão ou opnião?
+                         Encaminhe-nos o que você acha!
+                         <br><br>
+                         Será um prazer receber sua menagem!
+                     </p>
+                </div>
+                <div class="forms">
+                    <form class="inputs" >
+                        <input type="text" name="nome" placeholder="Nome Completo" value="">
+                        <input type="email" name="email" placeholder="ex: exaple@mail.com" value="">
+                        <input type="tel" name="telefone" placeholder="(00) 00000-0000" value="">
+                        <textarea name="mensagem" rows="8" cols="80" placeholder="Digite sua mensagem..."> teste</textarea>
+                        <button type="submit" name="button-enviar" onclick="alert('Enviado')">Enviar</button>
+                    </form>
+                </div>
             </section>
 
+
+
             <footer class="rodape">
+                <figure class="logo-storm">
+                    <img src="./img/imgs/logo-ofi-branca.png" alt="Logo storm IT Solutions">
+                </figure>
+
+                <p>
+                    Copyright 2020 © Todos os direitos reservados.
+                    <br>Storm IT Solutions
+                </p>
+
+                <div class="redes-socias">
+                    <figure class="icones">
+                        <a href="#"><img src="img/imgs/icon-facebook.png" alt="Link facebook"></a>
+                    </figure>
+
+                    <figure class="icones">
+                        <a href="#"><img src="img/imgs/icon-insta.png" alt="Link Instagram"></a>
+                    </figure>
+
+                    <figure class="icones">
+                        <a href="#"><img src="img/imgs/icon-linkedin.png" alt="Link Linkedin"></a>
+                    </figure>
+                </div>
 
             </footer>
 
