--- a/index.html
+++ b/index.html
@@ -45,123 +45,129 @@
 
 
             <section class="sec1" >
-              <h2><a href="#" name="b2w">Quem é a B2W?</a></h2>
-              <div class="texto">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                  qui officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
+                <div class="overlay">
+                    <h2><a href="#" name="b2w">Quem é a B2W?</a></h2>
+                    <div class="texto">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                            qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                </div>
             </section>
 
 
             <section class="sec2" >
-              <h2><a href="#" name="problema">Problema</a></h2>
-              <div class="texto">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                  qui officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
+                <div class="overlay">
+                    <h2><a href="#" name="problema">Problema</a></h2>
+                    <div class="texto">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                            qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                </div>
             </section>
 
 
             <section class="sec3" >
-              <h2><a href="#" name="solucao">Solução</a></h2>
-              <div class="texto">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                  qui officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
+                <div class="overlay">
+                    <h2><a href="#" name="solucao">Solução</a></h2>
+                    <div class="texto">
+                        <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                        qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                </div>
             </section>
 
 
             <section class="sec4" >
-                <h2><a href="#" name="equipe">Quem somos nós?</a></h2>
+                <div class="overlay">
+                    <h2><a href="#" name="equipe">Quem somos nós?</a></h2>
 
-                <div class="membro membro-1">
-                    <figure>
-                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                        </figcaption>
-                    </figure>
+                    <div class="membro membro-1">
+                        <figure>
+                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                            <figcaption>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            </figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="membro membro-1">
+                        <figure>
+                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                            <figcaption>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            </figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="membro membro-1">
+                        <figure>
+                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                            <figcaption>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            </figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="membro membro-1">
+                        <figure>
+                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                            <figcaption>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            </figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="membro membro-1">
+                        <figure>
+                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                            <figcaption>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            </figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="membro membro-1">
+                        <figure>
+                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
+                            <figcaption>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                            </figcaption>
+                        </figure>
+                    </div>
                 </div>
-
-                <div class="membro membro-1">
-                    <figure>
-                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                        </figcaption>
-                    </figure>
-                </div>
-
-                <div class="membro membro-1">
-                    <figure>
-                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                        </figcaption>
-                    </figure>
-                </div>
-
-                <div class="membro membro-1">
-                    <figure>
-                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                        </figcaption>
-                    </figure>
-                </div>
-
-                <div class="membro membro-1">
-                    <figure>
-                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                        </figcaption>
-                    </figure>
-                </div>
-
-                <div class="membro membro-1">
-                    <figure>
-                        <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                        <figcaption>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                        </figcaption>
-                    </figure>
-                </div>
-
-
             </section>
 
 
