--- a/index.html
+++ b/index.html
@@ -7,219 +7,210 @@
         <title>.: Landing Page :.</title>
     </head>
     <body>
-        <div class="container">
+        <header class="cabecalho">
+            <nav>
+                <input type="checkbox" id="res-menu">
+                <label for="res-menu">
+                    <i class = "bars"></i>
+                    <i class="times"></i>
+                </label>
 
-            <header class="head">
-                <nav>
-                    <input type="checkbox" id="res-menu">
-                    <label for="res-menu">
-                        <i class = "fa fa-hars" id="sign-one">____</i>
-                        <i class="fa fa-times" id="sign-two">____</i>
-                    </label>
-
-                    <ul>
-                        <li><a href="#b2w">Quem é a B2W?</a></li>
-                        <li><a href="#problema">Problema</a></li>
-                        <li><a href="#solucao">Solução</a></li>
-                        <li><a href="#equipe">Equipe</a></li>
-                        <li><a href="#contato">Contato</a></li>
-                    </ul>
-                </nav>
-                <div class="banner-area">
-                    <div class="banner-text">
-                        <figure id="logo-b2w">
-                            <img src="./img/imgs/b2w.png" alt="">
-                        </figure>
-                        <div class="frase">
-                            <h1>
-                                Storm IT Solutions
-                            </h1>
-                            <p>
-                                Uma tempestade de soluções para eletrizar o seu negócio!!
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-            </header>
-
-
-            <section class="sec1" >
-                <div class="overlay">
-                    <h2><a href="#" name="b2w">Quem é a B2W?</a></h2>
-                    <div class="texto">
+                <ul>
+                    <li><a href="#b2w">Quem é a B2W?</a></li>
+                    <li><a href="#problema">Problema</a></li>
+                    <li><a href="#solucao">Solução</a></li>
+                    <li><a href="#equipe">Equipe</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
+            <div class="banner-area">
+                <div class="banner-text">
+                    <figure id="logo-b2w">
+                        <img src="./img/imgs/b2w.png" alt="">
+                    </figure>
+                    <div class="frase">
+                        <h1>
+                            Storm IT Solutions
+                        </h1>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                            qui officia deserunt mollit anim id est laborum.
+                            Uma tempestade de soluções para eletrizar o seu negócio!!
                         </p>
                     </div>
                 </div>
-            </section>
+            </div>
+
+        </header>
 
 
-            <section class="sec2" >
-                <div class="overlay">
-                    <h2><a href="#" name="problema">Problema</a></h2>
-                    <div class="texto">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                            qui officia deserunt mollit anim id est laborum.
-                        </p>
-                    </div>
-                </div>
-            </section>
-
-
-            <section class="sec3" >
-                <div class="overlay">
-                    <h2><a href="#" name="solucao">Solução</a></h2>
-                    <div class="texto">
-                        <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                        qui officia deserunt mollit anim id est laborum.
-                        </p>
-                    </div>
-                </div>
-            </section>
-
-
-            <section class="sec4" >
-                <div class="overlay">
-                    <h2><a href="#" name="equipe">Quem somos nós?</a></h2>
-
-                    <div class="membro membro-1">
-                        <figure>
-                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                            <figcaption>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="membro membro-1">
-                        <figure>
-                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                            <figcaption>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="membro membro-1">
-                        <figure>
-                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                            <figcaption>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="membro membro-1">
-                        <figure>
-                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                            <figcaption>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="membro membro-1">
-                        <figure>
-                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                            <figcaption>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="membro membro-1">
-                        <figure>
-                            <img src="./img/imgs/profissional.jpg" alt="imagem menbro">
-                            <figcaption>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit
-                            </figcaption>
-                        </figure>
-                    </div>
-                </div>
-            </section>
-
-
-            <section class="sec5" >
-                <h2> <a href="#" name="contato">Fale Conosco</a></h2>
+        <section class="sec1" >
+            <div class="overlay">
+                <h2><a href="#" name="b2w">Quem é a B2W?</a></h2>
                 <div class="texto">
-                     <p>
-                         Ficou com alguma dúvida, sugestão ou opnião?
-                         Encaminhe-nos o que você acha!
-                         <br><br>
-                         Será um prazer receber sua menagem!
-                     </p>
+                    <p>
+                        A B2W Marketplace é um canal de vendas formado pelas marcas americanas.com, Submarinho e Shoptime, esse canal permite que varejistas, industrias e distribuidores com ou sem loja online se tornem parceiro dessas marcas e vendam seus produtos para clientes que já compram nesses sites.
+                        Benefícios: A B2W Marketplace faz com que seus produtos ganhem visibildade, recebendo mais pedidos e aumentando assim o faturamento com as vendas.
+                        Vantagens de se filiar a B2W: Não é necessário investir capital para tornar-se um parceiro, pagando somente uma comissão em cima do valor do pedido.
+                        https://www.youtube.com/watch?v=BU-TNeUL99g
+                    </p>
                 </div>
-                <div class="forms">
-                    <form class="inputs" >
-                        <input type="text" name="nome" placeholder="Nome Completo" value="">
-                        <input type="email" name="email" placeholder="ex: exaple@mail.com" value="">
-                        <input type="tel" name="telefone" placeholder="(00) 00000-0000" value="">
-                        <textarea name="mensagem" rows="8" cols="80" placeholder="Digite sua mensagem..."> teste</textarea>
-                        <button type="submit" name="button-enviar" onclick="alert('Enviado')">Enviar</button>
-                    </form>
+            </div>
+        </section>
+
+
+        <section class="sec2" >
+            <div class="overlay">
+                <h2><a href="#" name="problema">Problema</a></h2>
+                <div class="texto">
+                    <p>
+                        Você sabe o que é turnover?
+                        Também conhecido como taxa de rotatividade de colaboradores em uma empresa, trata-se de um dos índices mais importantes para o Departamento de Recursos Humanos (RH). O turnover é o movimento de entrada e saída de profissionais dentro de uma empresa. O intuito é manter o fluxo dos índices  o mais baixo possível.
+                        A B2W, através das mentorias com a Product Owner Camila, nos apresentou problemas como rotatividade de funcionários.
+                        Nosso desafio foi criar uma solução para amenizar
+                        esse problema.
+                    </p>
                 </div>
-            </section>
+            </div>
+        </section>
+
+
+        <section class="sec3" >
+            <div class="overlay">
+                <h2><a href="#" name="solucao">Solução</a></h2>
+                <div class="texto">
+                    <p>
+                        A Storm IT Solutions desenvolverá uma plataforma
+                        gamificada que possui um sistema de recompensas a fim de motivar e promover o engajamento dos colaboradores.
+                        Nesta aplicação, será possível uma interação entre
+                        sistema e usuário, onde o associado poderá obter informações afim de saber sobre suas metas e  conquistas.
+                        Com o sistema de recompensas, o funcionário terá mais motivação para executar suas tarefas de acordo com o prazo estimado, sendo assim recompensado pela sua méritocracia.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="sec4" >
+            <div class="overlay">
+                <h2><a href="#" name="equipe">Quem somos nós?</a></h2>
+
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/membros/victor.png" alt="imagem menbro">
+                        <figcaption>
+                            <h3>Victor Sunahara</h3>
+                            Recrutador de TI na empresa Bold Brasil
+                            e estudante em Análise e Desenvolvimento de Sistemas
+                            na Fiap.
+                        </figcaption>
+                    </figure>
+                </div>
+
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/membros/caio.png" alt="imagem menbro">
+                        <figcaption>
+                            <h3>Caio Rocha</h3>
+                            Analista Desenvolvedor Júnior em .Net na empresa
+                            Ibiz Tecnologia e estudante em Análise e
+                            Desenvolvimento de Sistemas na Fiap.
+                        </figcaption>
+                    </figure>
+                </div>
+
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/membros/joao.jpeg" alt="imagem menbro">
+                        <figcaption>
+                            <h3>João Queiroz</h3>
+                            Estudante de Desenvolvimento e análise de sistemas na FIAP e Deselvovedor Python na empresa Passos Mágicos
+                        </figcaption>
+                    </figure>
+                </div>
+
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/membros/gouget.jpeg" alt="imagem menbro">
+                        <figcaption>
+                            <h3>Lucas Gouget Marinho</h3>
+                            Estagiário em Desenvolvimento .Net na empresa
+                            Western Union e estudante em Análise e
+                            Desenvolvimento de Sistemas na Fiap.
+                        </figcaption>
+                    </figure>
+                </div>
+
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/membros/enrique.jpg" alt="imagem menbro">
+                        <figcaption>
+                            <h3>Enrique Caribé</h3>
+                            Aprendiz Assistente Administrativo na empresa
+                            PricewaterhouseCoopers (PHW)
+                        </figcaption>
+                    </figure>
+                </div>
+
+                <div class="membro membro-1">
+                    <figure>
+                        <img src="./img/membros/alves.jpeg" alt="imagem menbro">
+                        <figcaption>
+                            <h3>Lucas Alves</h3>
+                            Estudante de Análise e Desenvolvimento de Sistemas na Fiap.
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="sec5" >
+            <h2> <a href="#" name="contato">Fale Conosco</a></h2>
+            <div class="texto">
+                 <p>
+                     Ficou com alguma dúvida, sugestão ou opnião?
+                     Encaminhe-nos o que você acha!
+                     <br><br>
+                     Será um prazer receber sua menagem!
+                 </p>
+            </div>
+            <div class="forms">
+                <form class="inputs" >
+                    <input type="text" name="nome" placeholder="Nome Completo" value="">
+                    <input type="email" name="email" placeholder="ex: exaple@mail.com" value="">
+                    <input type="tel" name="telefone" placeholder="(00) 00000-0000" value="">
+                    <textarea name="mensagem" rows="8" cols="80" placeholder="Digite sua mensagem..."> </textarea>
+                    <button type="submit" name="button-enviar" onclick="alert('Enviado')">Enviar</button>
+                </form>
+            </div>
+        </section>
 
 
 
-            <footer class="rodape">
-                <figure class="logo-storm">
-                    <img src="./img/imgs/logo-ofi-branca.png" alt="Logo storm IT Solutions">
+        <footer class="rodape">
+            <figure class="logo-storm">
+                <img src="./img/imgs/logo-ofi-branca.png" alt="Logo storm IT Solutions">
+            </figure>
+
+            <p>
+                Copyright 2020 © Todos os direitos reservados.
+                <br>Storm IT Solutions
+            </p>
+
+            <div class="redes-socias">
+                <figure class="icones">
+                    <a href="#"><img src="img/imgs/icon-facebook.png" alt="Link facebook"></a>
                 </figure>
 
-                <p>
-                    Copyright 2020 © Todos os direitos reservados.
-                    <br>Storm IT Solutions
-                </p>
+                <figure class="icones">
+                    <a href="#"><img src="img/imgs/icon-insta.png" alt="Link Instagram"></a>
+                </figure>
 
-                <div class="redes-socias">
-                    <figure class="icones">
-                        <a href="#"><img src="img/imgs/icon-facebook.png" alt="Link facebook"></a>
-                    </figure>
+                <figure class="icones">
+                    <a href="#"><img src="img/imgs/icon-linkedin.png" alt="Link Linkedin"></a>
+                </figure>
+            </div>
 
-                    <figure class="icones">
-                        <a href="#"><img src="img/imgs/icon-insta.png" alt="Link Instagram"></a>
-                    </figure>
+        </footer>
 
-                    <figure class="icones">
-                        <a href="#"><img src="img/imgs/icon-linkedin.png" alt="Link Linkedin"></a>
-                    </figure>
-                </div>
-
-            </footer>
-
-        </div>
     </body>
 </html>
